<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!"</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="LoginHint">Login Name"</string>
    <string name="Password">Password</string>
    <string name="PasswordHint">Enter Password</string>
    <string name="RadioButtonText">Radio Button</string>
    <string name="CheckBoxText">Check Box</string>
    <string name="ChatButtonText">Start Chat</string>
    <string name="TextField">Text Field</string>
    <string name="SendText">Send</string>
    <string name="textviewTwo">TextView</string>
    <string name="message_hint">new chat</string>
    <string name="LoginFlagDesc">Flag</string>
    <string name="Question">What does this do?</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="current_temp">Current:"</string>
    <string name="min_temp">Min:</string>
    <string name="max_temp">Max:</string>
    <string name="weather_forecast"> Weather Forecast</string>

    <string name="delete_message">Delete this message</string>
    <string name="message_selected_info">Message:</string>
    <string name="message_selected_id">Message ID:</string>

    <string name="test_Toolbar">Test Toolbar</string>
    <string name="toolbar_one">One</string>
    <string name="toolbar_two">Two</string>
    <string name="toolbar_three">Three</string>
    <string name="toolbar_four">About</string>
    <string name="version_info">Version 1.0, by Zhan Shen</string>
    <string name="toolbar_dialog">New Message</string>
    <string name="snackbarMessage">You selected item 1.</string>
    <string name="toolbarDialogMessage">Do you want to go back?</string>
    <string name="button_send">"SEND"</string>
    <string name="button_delete">"Delete this message"</string>
    <string name="button_toolbar">"Test Toolbar"</string>
    <string name="dialogTitle">"Do you want to go back?"</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="two">two</string>
</resources>